--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -33,6 +34,7 @@
     "eslint-config-prettier": "^8.6.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
+    "prettier-plugin-prisma": "^4.9.0",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
