fix: main is index.js in dist

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "poc-ket-upgraded",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "index.js",
   "scripts": {
     "start:dev": "nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register src/server.ts' -e ts",
     "husky": "husky install",
